--- a/style.css
+++ b/style.css
@@ -7,17 +7,21 @@
 
 /* Body styles */
 body {
-    font-family: Arial, sans-serif;
-    line-height: 2;
-    background-color: #f4f4f4;
+    font-family: 'Arial', sans-serif; /* Choix d'une meilleure police d'écriture */
+    line-height: 1.6;
+    background-color: #f2f2f2; /* Couleur de fond unique */
     color: #333;
-    padding: 20px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
 }
+
 
 /* Header styles */
 header {
-    background-color: #6532a7;
-    color: #fff;
+    background-color: #f2f2f2;
+    color: #000000;
     padding: 20px;
     text-align: center;
 }
@@ -36,7 +40,7 @@ nav ul li {
 }
 
 nav ul li a {
-    color: #fff;
+    color: #000000;
     text-decoration: none;
 }
 
@@ -78,7 +82,7 @@ section h2 {
 .project-info a {
     display: inline-block;
     padding: 5px 10px;
-    background-color: #6532a7;
+    background-color: #f2f2f2;
     color: #fff;
     text-decoration: none;
     border-radius: 5px;
@@ -90,7 +94,7 @@ section h2 {
 
 /* Footer styles */
 footer {
-    background-color: #6532a7;
+    background-color: #f2f2f2;
     color: #fff;
     padding: 20px;
     text-align: center;
@@ -109,14 +113,14 @@ footer {
 
 /* Footer styles */
 footer {
-    background-color: #6532a7;
-    color: #fff;
+    background-color: #f2f2f2;
+    color: #000000;
     padding: 20px;
     text-align: center;
 }
 
 footer a {
-    color: #fff;
+    color: #000000;
     text-decoration: none;
     margin-right: 10px;
 }
